# charge-partitioning

./: .gitignore  chargePartitioning.py  charges-neutral.txt  charges.txt  dc_dft.py  deprotonated_negative.xyz  deprotonated_negative_hull.xyz  deprotonated_neutral.xyz  deprotonated_neutral_hull.xyz  dimer_fun.py  energies.txt  extract_results.py  h2o.xyz  hf_and_scan.py  hirshfeldWeightFunction.py  md.py  methyl.xyz  methylret.xyz  min.xyz  molecule_trajectory.py  neutral.xyz  opt.xyz  periodictable.py  plot_orbitals.py  protonated_neutral.xyz  protonated_neutral_hull.xyz  protonated_plus_h.xyz  protonated_plus_hull.xyz  readme.md  runPartitioning.py  runSingleAtom.py  setup.cfg  small.xyz  smoothVoronoiPartitioning.py  t.xyz  temp.xyz  temp_low.xyz  test.xyz  test_scf.py  toto.xyz  (+2 more)
chargePartitioning/: Partitioning.py  chargePartitioning.py  dc_dft.py  dimer_fun.py  electronCounter.py  hirshfeldWeightFunction.py  periodictable.py  smoothVoronoiPartitioning.py
chargePartitioning/radialAtomicDensities/: readme.md
radialAtomicDensities/byNumber/: 001-density.AE  001-density.AE.grid  002-density.AE  002-density.AE.grid  003-density.AE.grid  007-density.AE  007-density.AE.grid  008-density.AE  008-density.AE.grid  009-density.AE  009-density.AE.grid  010-density.AE  010-density.AE.grid  012-density.AE.grid  013-density.AE  014-density.AE.grid  015-density.AE.grid  018-density.AE  018-density.AE.grid  019-density.AE.grid  020-density.AE  021-density.AE  022-density.AE  022-density.AE.grid  023-density.AE  024-density.AE  024-density.AE.grid  028-density.AE.grid  (+78 more)
(+91 files in other folders)
