[metadata]
name = chargePartitioning
version = 0.1.0

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    ase
    scipy
    pyscf
# [options.package_data]
# * =
#   *.AE
#   *.AE.grid
# [options.entry_points]
# console_scripts =
#     structureDB = structureDB.main:main