[metadata]
name = chargePartitioning
version = 0.1.0

[options]
packages =
    chargePartitioning
    chargePartitioning.radialAtomicDensities.byNumber
python_requires = >=3.7
install_requires =
    numpy
    ase
    scipy
    pyscf
[options.package_data]
* =
  *.AE
  *.AE.grid
# [options.entry_points]
# console_scripts =
#     structureDB = structureDB.main:main
